# capoc

./: CMakeLists.txt  README.md  capaffine.cpp  capaffine.h  capcli.cpp  capcli.h  capdebug.cpp  capdebug.h  capengine.cpp  capengine.h  capmodel.cpp  capmodel.h  capmodel_3d.cpp  capmodel_fitplane.cpp  capmodel_nvm.cpp  capmodel_off.cpp  capmodel_ply.cpp  capmodel_selection.cpp  capmodel_transforms.cpp  capnvm.cpp  capnvm.h  caprenderer.cpp  caprenderer.h  caprenderer_ancientgl.cpp  caprenderer_ancientgl.h  capserver.cpp  capserver.h  captypes.h  cli.cpp  cli.def  cli.h  cli_defs.h  cli_screen.cpp  clidata.c  clidata.h  gen_cli.sh  gen_cli_ext.awk  img.c  ply_io.c  svd.cpp  (+20 more)
tutorial/: index.html  style.css
